Header, new text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="grid-container">
     <section class="grid-70 prefix-15 suffix-15 mobile-grid-100 tablet-grid-70 tablet-prefix-15 tablet-suffix-15">
-            <h1>Jerry Johansson</h1>
+            <h1>Jerry Johansson, sitar</h1>
     		<p> Jerry Johansson started out his musical journey some distant years ago in the Swedish city of Varberg, then as a guitar player and composer in various rock- and 		jazz-groups. After having had a minor revelation when experiencing a George Harrison-composition on a Beatles-album; an overwhelmed Jerry realised that the point of no return had finally arrived.
 			</p>
 			<p>
